# rustantic

./: Cargo.toml  README.md
rustantic/: Cargo.toml
rustantic-macros/: Cargo.toml
rustantic-macros/src/: lib.rs
rustantic/src/: collector.rs  generator.rs  lib.rs  marcos.rs  models.rs
rustantic/src/generators/: enum_generator.rs  field_generator.rs  generator.rs  generator_base.rs  mod.rs  struct_generator.rs  union_generator.rs
rustantic_test/: Cargo.toml  build.rs  pyproject.toml
rustantic_test/rustantic_test/: __init__.py
rustantic_test/src/: lib.rs
