[package]
name = "rustantic"
version = "0.2.0"
license = "MIT OR Apache-2.0"
keywords = ["pyo3", "python", "ffi"]
authors = [
    "Rustantic Project and Contributors <https://github.com/RcRonco/rustantic>",
]
description = "Rust to Pydantic generator"
homepage = "https://github.com/RcRonco/rustantic"
repository = "https://github.com/RcRonco/rustantic"
edition = "2021"
categories = ["development-tools::ffi"]
exclude = [
    "/.gitignore",
    ".cargo/config",
    "/codecov.yml",
    "/Makefile",
    "/pyproject.toml",
    "/noxfile.py",
    "/.github",
    "/tests/ui",
]

[dependencies]
syn = { version = "2.0.98", features = ["visit", "full", "derive", "parsing"] }
quote = { version = "1.0.38" }
serde = { version = "1.0.217", features = ["derive"] }
walkdir = "2.5.0"
convert_case = "0.7.1"
itertools = "0.14.0"
