[package]
name = "rustantic_test"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustantic_test"
crate-type = ["cdylib"]

[dependencies]
rustantic-macros = { path = "../rustantic-macros" }

[dependencies.pyo3]
version = "0.23.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.12
features = ["abi3-py38"]

[build-dependencies]
quote = "1.0.38"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
syn = { version = "2.0.98", features = ["visit", "full", "derive", "parsing"] }
rustantic-macros = { path = "../rustantic-macros" }
rustantic = { path = "../rustantic", features = ["generator"] }
inventory = "0.3.19"
