[package]
name = "rustantic_test"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustantic_test"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "=0.23.3", features = ["abi3-py312", "full"] }
chrono = "0.4.39"
rustantic-macros = { path = "../rustantic-macros" }
uuid = { version = "1.11.0", features = ["v1", "v3", "v4", "v5", "v7"] }

[build-dependencies]
quote = "1.0.38"
rand = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
syn = { version = "2.0.98", features = ["visit", "full", "derive", "parsing"] }
rustantic-macros = { path = "../rustantic-macros" }
rustantic = { path = "../rustantic", features = ["generator"] }
