[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rustantic_test"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "maturin>=1.8.1",
    "pydantic>=2.10.6",
]

[tool.maturin]
features = ["pyo3/extension-module"]
include = [{ path = "api_models/*.py", format = ["sdist", "wheel"] }]
python-packages = ["api_models"]
